# Erechtheus

./: .env.prod  README.md  docker-compose.yml  pyproject.toml
HoshinoBot/hoshino/modules/botmanage/: .help.py.swp  help.py
HoshinoBot/hoshino/modules/groupguess/: README.md  groupguess.py
HoshinoBot/hoshino/modules/groupmaster/: anti_asoul.py  anti_kfc.py
HoshinoBot/hoshino/modules/hoshinobot-plugin-exchange-rate/: .gitignore  main.py
HoshinoBot/hoshino/modules/hoshinobot-plugin-exchange-rate/src/: exchange_rate.py
HoshinoBot/hoshino/modules/maimaiDX/: __init__.py  maimai_arcade.py
HoshinoBot/hoshino/modules/maimaiDX/libraries/: maimaidx_api_data.py  maimaidx_arcade.py  maimaidx_music.py
HoshinoBot/hoshino/modules/translate/: translate.py
HoshinoBot/test/: __init__.py
Hoshino_data/: group_member_guess_winning_counter.db  pcr_duel.db
Hoshino_data/service_config/: anti-asoul.json  anti-holo.json  anti-lex.json  anti-msg-recall.json  maimaiDX.json  maimaiDX排卡.json
